added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,54 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The title element defines the title for a webpage.</li>
+          <li>The meta and title elements are nested inside the head.</li>
+          <li>Elements that are nested inside other elements are called child elements.</li>
+          <li>Div is used to create a division in the page.</li>
+          <li>We insert the content between an opening tag and a closing tag.</li>
+          <li>An element refers to the entire element from opening from opening tag to closing tag.</li>
+          <li>A tag refers only to what appears inside the angle brackets.</li>
+          <li>The h1, h2, h3, h4, h5, and h6 elements represent the level of heading a given text block represents. Larger or more prominent titles and subtitles to organize a page.</li>
+          <li>The biggest heading, h1, should only appear once on each page. Order matters.</li>
+          <li>The ul, ol, and li elements represent unordered lists, ordered lists, and list items. These HTML elements represent bulleted or numbered lists.</li>
+          <li>The img element contains information about images that are displayed.</li>
+          <li>The src attribute defines the location of the image. This attribute is contained inside the img element.</li>
+          <li>The br element creates a line of empty space, or a line break, between two blocks of content.</li>
+          <li>The a element stands for anchor. It creates links to the webpage.</li>
+          <li>The href attribute points to the URL for the link.</li>
+          <li>The header also contains an img element which has src and alt attribute.</li>
+          <li>The main element contains the section elements to organize the content based on the topic.</li>
+          <li>The id attribut inside the section element is way for HTML to identify elements and select them.</li>
+          <li>The footer contains the author, copyright, contact, sitemap, and navigation.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
